crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__deprecated_field_parameters_configured.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8111 Field parameter "digits_compute" is no longer supported. Use "digits" instead.
 --> renamed_field_parameter.py:4:27
  |
2 |     _inherit = "my.model"
3 |
4 |     amount = fields.Float(digits_compute=precision)
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^
5 |     ref = fields.Char(select=True)
6 |     name = fields.Char(index=True)
  |
