crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__deprecated_inselect_operator.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODE8149 The domain operator 'inselect' is deprecated in Odoo 18.0+. Use 'in' SQL or 'not in' SQL instead
 --> deprecated_inselect_operator.py:1:18
  |
1 | domain = [("id", "inselect", (query, params))]
  |                  ^^^^^^^^^^
2 | domain2 = [("id", "not inselect", (query, params))]
3 | domain3 = [("id", "in", ids)]
  |

ODE8149 The domain operator 'not inselect' is deprecated in Odoo 18.0+. Use 'in' SQL or 'not in' SQL instead
 --> deprecated_inselect_operator.py:2:19
  |
1 | domain = [("id", "inselect", (query, params))]
2 | domain2 = [("id", "not inselect", (query, params))]
  |                   ^^^^^^^^^^^^^^
3 | domain3 = [("id", "in", ids)]
  |
