crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__deprecated_name_get.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODE8146 'name_get' is deprecated. Use '_compute_display_name' instead
 --> deprecated_name_get.py:4:9
  |
2 |     _inherit = "my.model"
3 |
4 |     def name_get(self):
  |         ^^^^^^^^
5 |         return []
  |
