crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__deprecated_odoo_method_call.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8502 `check_access_rights` is deprecated since Odoo 18.0. Use `check_access` instead, or `has_access` where a boolean is needed.
  --> deprecated_odoo_method_call.py:8:14
   |
 7 |     def deprecated_in_18(self):
 8 |         self.check_access_rights("read")
   |              ^^^^^^^^^^^^^^^^^^^
 9 |         self.check_access_rule("write")
10 |         self._filter_access_rules("read")
   |

ODW8502 [*] `check_access_rule` is deprecated since Odoo 18.0. Use `check_access` instead.
  --> deprecated_odoo_method_call.py:9:14
   |
 7 |     def deprecated_in_18(self):
 8 |         self.check_access_rights("read")
 9 |         self.check_access_rule("write")
   |              ^^^^^^^^^^^^^^^^^
10 |         self._filter_access_rules("read")
11 |         self._filter_access_rules_python("read")
   |
help: Replace with `check_access`
   |
8  |         self.check_access_rights("read")
   -         self.check_access_rule("write")
9  +         self.check_access("write")
10 |         self._filter_access_rules("read")
   |
note: This is an unsafe fix and may change runtime behavior

ODW8502 [*] `_filter_access_rules` is deprecated since Odoo 18.0. Use `_filtered_access` instead.
  --> deprecated_odoo_method_call.py:10:14
   |
 8 |         self.check_access_rights("read")
 9 |         self.check_access_rule("write")
10 |         self._filter_access_rules("read")
   |              ^^^^^^^^^^^^^^^^^^^^
11 |         self._filter_access_rules_python("read")
12 |         self._check_recursion()
   |
help: Replace with `_filtered_access`
   |
9  |         self.check_access_rule("write")
   -         self._filter_access_rules("read")
10 +         self._filtered_access("read")
11 |         self._filter_access_rules_python("read")
   |
note: This is an unsafe fix and may change runtime behavior

ODW8502 [*] `_filter_access_rules_python` is deprecated since Odoo 18.0. Use `_filtered_access` instead.
  --> deprecated_odoo_method_call.py:11:14
   |
 9 |         self.check_access_rule("write")
10 |         self._filter_access_rules("read")
11 |         self._filter_access_rules_python("read")
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |         self._check_recursion()
13 |         self._check_m2m_recursion("child_ids")
   |
help: Replace with `_filtered_access`
   |
10 |         self._filter_access_rules("read")
   -         self._filter_access_rules_python("read")
11 +         self._filtered_access("read")
12 |         self._check_recursion()
   |
note: This is an unsafe fix and may change runtime behavior

ODW8502 `_check_recursion` is deprecated since Odoo 18.0. Use `not _has_cycle(...)` instead — the result is inverted.
  --> deprecated_odoo_method_call.py:12:14
   |
10 |         self._filter_access_rules("read")
11 |         self._filter_access_rules_python("read")
12 |         self._check_recursion()
   |              ^^^^^^^^^^^^^^^^
13 |         self._check_m2m_recursion("child_ids")
   |

ODW8502 `_check_m2m_recursion` is deprecated since Odoo 18.0. Use `not _has_cycle(...)` instead — the result is inverted.
  --> deprecated_odoo_method_call.py:13:14
   |
11 |         self._filter_access_rules_python("read")
12 |         self._check_recursion()
13 |         self._check_m2m_recursion("child_ids")
   |              ^^^^^^^^^^^^^^^^^^^^
14 |
15 |     def deprecated_in_19(self):
   |

ODW8502 `read_group` is deprecated since Odoo 19.0. Use `_read_group` in backend code, or `formatted_read_group` for a formatted result.
  --> deprecated_odoo_method_call.py:16:14
   |
15 |     def deprecated_in_19(self):
16 |         self.read_group([], ["amount:sum"], ["partner_id"])
   |              ^^^^^^^^^^
17 |         self.check_field_access_rights("read", ["name"])
18 |         self.env["my.model"].browse(1).toggle_active()
   |

ODW8502 `check_field_access_rights` is deprecated since Odoo 19.0. Use `_check_field_access`, or `fields_get` to list the allowed fields.
  --> deprecated_odoo_method_call.py:17:14
   |
15 |     def deprecated_in_19(self):
16 |         self.read_group([], ["amount:sum"], ["partner_id"])
17 |         self.check_field_access_rights("read", ["name"])
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
18 |         self.env["my.model"].browse(1).toggle_active()
   |

ODW8502 `toggle_active` is deprecated since Odoo 19.0. Use `action_archive` or `action_unarchive` depending on the intent.
  --> deprecated_odoo_method_call.py:18:40
   |
16 |         self.read_group([], ["amount:sum"], ["partner_id"])
17 |         self.check_field_access_rights("read", ["name"])
18 |         self.env["my.model"].browse(1).toggle_active()
   |                                        ^^^^^^^^^^^^^
19 |
20 |     def read_group(self, domain, fields, groupby, offset=0, limit=None, orderby=False):
   |

ODW8502 `read_group` is deprecated since Odoo 19.0. Use `_read_group` in backend code, or `formatted_read_group` for a formatted result.
  --> deprecated_odoo_method_call.py:26:24
   |
24 |     def toggle_active(self):
25 |         """A `super()` call to a *different* deprecated method is still a migration site."""
26 |         return super().read_group([], [], [])
   |                        ^^^^^^^^^^
27 |
28 |     def replacements(self):
   |
